--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -65,7 +65,6 @@ $azure\
 $gcloud\
 $openstack\
 $docker_context\
-$kubernetes\
 $terraform\
 $line_break\
 $shell\
@@ -73,14 +72,19 @@ $character"""
 add_newline = true
 
 [character]
-success_symbol = '[ﬦ](bold blue) '
-error_symbol = '[ﬦ](bold blue) '
-vicmd_symbol = '[](bold green) '
+# success_symbol = '[ﬦ](bold blue) '
+success_symbol = '[](bold blue)'
+error_symbol = '[](bold red)'
+# success_symbol = "(fg:#1e1e2e bg:#1e1e2e)[](fg:#585b70 bg:#1e1e2e)[ ](fg:#b4befe bg:#585b70)[](fg:#585b70 bg:none) "
+# error_symbol = "[](fg:#585b70 bg:#1e1e2e)[ ](fg:#f38ba8 bg:#585b70)[](fg:#585b70 bg:none) "
+
+
+# error_symbol = '[ﬦ](bold blue) '
 
 [directory]
-style = 'fg:#74c7ec'
+style = 'fg:blue'
 read_only = ' '
-use_os_path_sep = false  # fuck windows :verynice:
+use_os_path_sep = false   # fuck windows :verynice:
 truncate_to_repo = true
 truncation_length = 3
 truncation_symbol = "../"
@@ -93,26 +97,25 @@ truncation_symbol = "../"
 'Downloads' = ' '
 'Music' = ' '
 'Pictures' = ' '
-'Work' = ' '
+'Workstuff' = ' '
 'git-files' = ' '
 
 [username]
 show_always = true
-style_user = "#a6e3a1 bold"
-# format = '\[[$user]($style)\]'
-format = "[$user]($style)[@](#89b4fa)"
+style_user = "fg:green bold"
+format = "[$user]($style)[@](fg:blue)"
 
- [hostname]
- ssh_only = false 
+[hostname]
+ssh_only = false
 # ssh_symbol = "🌐 "
 format = "[$hostname]($style) "
-style = "#f38ba8 bold"
+style = "fg:red bold"
 
 [sudo]
 disabled = false
 format = '\[[$symbol]($style)\] '
 style = 'fg:red'
-symbol = ' '
+symbol = ''
 
 [git_branch]
 symbol = ' '
@@ -154,9 +157,6 @@ format = '\[[$symbol($version)]($style)\]'
 
 [deno]
 format = '\[[$symbol($version)]($style)\]'
-
-[dotnet]
-format = '\[[$symbol($version)(🎯 $tfm)]($style)\]'
 
 [elixir]
 format = '\[[$symbol($version \(OTP $otp_version\))]($style)\]'
@@ -262,13 +262,10 @@ format = '\[[$symbol($version)]($style)\]'
 
 ### CONTEXT INDICATORS
 [aws]
-# symbol = ' '
-symbol = '   '
-style = "#f38ba8"
-# format = '\[[$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
-format = '[$symbol($profile )[in ]($style)(\($region\) )(\[$duration\] )]($style)'
-# [aws.region_aliases]
-# ap-south-1 = "in"
+symbol = '  '
+# symbol = '   '
+style = "fg:purple"
+format = '[$symbol($profile )($style)(\($region\) )(\[$duration\] )]($style)'
 
 [docker_context]
 symbol = ' '
