--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -37,3 +37,4 @@
 [alias]
   upd = "!git remote update -p; git merge --ff-only @{u}"
   yolo = !git commit -m \"chore: ${curl -s whatthecommit.com/index.txt}\" # Courtesy winston
+  glog = !git log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
